# exercise

./: .gitignore  README.md
dynamiclinkstatic/: CMakeLists.txt  main.cpp
dynamiclinkstatic/dynamic1/: dynamic.cpp
dynamiclinkstatic/dynamic2/: dynamic.cpp  dynamic.h
dynamiclinkstatic/staticf/: static.cpp  static.h
